updates to master
made changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,
             initial-scale=1">
     <title>About Me Page</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,14 +14,18 @@
     <header>
         <div class="namebox">
             <div class="textpadding">
-                <h1>Ryan Compton</h1>
+                <h1>John Glendening</h1>
             </div>
         </div>
         <ul id="links">
             <nav>
-                <li><a href="index.html">About | </a></li>
-                <li><a href="portfolio.html">Portfolio | </a></li>
+                <li><a href="index.html">About |</a></li>
+                <li><a href="portfolio.html">Portfolio |</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://github.com/JohnGlendening/Portfolio/blob/master/assets/Glendening%20John-RES.docx.docx%5B196%5D.pdf">Resume</a></li>
+                <li><a href="https://www.linkedin.com/in/john-glendening-pmp-cfe-ab03315/">LinkedIn</a></li>
+                <li><a href="https://github.com/JohnGlendening">GitHub</a></li>
+
             </nav>
         </ul>
     </header>
@@ -31,20 +35,16 @@
             <h2>About Me</h2>
 
             <hr>
-
-            <img id="profileimage" src="./assets/images/RyanCompton 120819.jpeg" alt="Ryan Compton">
-
-            <p>I am from Lawton, Oklahoma. I attended the University of Oklahoma for my undergraduate degree. I obtained a Bachelor of Science in 2010 specalizing in Multidisciplinary Studies: Technical Sciences. In that time, I began to study base elements
-                of Solidworks and Java. This is where my love of technology and software began to grow. After I departed from the University of Oklahoma, I moved to Oklahoma City, Oklahoma to begin my career. I started in the oil & gas industry as an
-                independent landman. This was very enjoyable, and I found the work very satisfying, as well.
-                <br> I moved to Denver, Colorado in March of 2013. I made the move for a number of reasons. Most important being that I had landed a new job working for Garlock Pipeline Technologies in Wheatridge, Colorado. Currently I am working for
-                a solar company called Blue Raven. In my spare time I enjoy spending time with my family and friends, distance running, skiing, riding my bike, experiencing live music, camping, reading, yoga, and traveling.
+            <img src="https://raw.githubusercontent.com/JohnGlendening/Portfolio/master/assets/0.jpg" alt="..." class="rounded-lg">
+            <p>I am from Hays, Kansas. I attended the University of Kansas for my undergraduate degree. I obtained my MBA in 2011 from the University of Kansas. In that time, I began to study financial modeling and analytics. This is where my love of technology
+                and software began to grow. After I departed from the University of Kansas, I moved to Washington D.C., to begin my career. I started as a lowly audit liaison at the Pentagon, but quickly advanced to building my own little analytics empire.
+                This was very enjoyable, and I found the work very satisfying, as well.
+                <br> I moved back to Hays, Kansas in March of 2016. I made the move for a number of reasons. Most important being that I had a son baking in his mother's stomach and I planned on being present for everything. Currently, I am working for
+                an oil services company called Hess Services. In my spare time I enjoy spending time with my family and friends, gofing, skiing, doing crossword puzzles, and traveling.
             </p>
         </div>
     </div>
-    <div class="footer">
-        Copyright &copy;
-    </div>
+
 </body>
 
 </html>
