--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width,
          initial-scale=1">
     <title>Portfolio Page</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
 </head>
 
 <body>
@@ -23,6 +22,9 @@
                 <li><a href="index.html">About |</a></li>
                 <li><a href="portfolio.html">Portfolio |</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://github.com/JohnGlendening/Portfolio/blob/master/assets/Glendening%20John-RES.docx.docx%5B196%5D.pdf">Resume</a></li>
+                <li><a href="https://www.linkedin.com/in/john-glendening-pmp-cfe-ab03315/">LinkedIn</a></li>
+                <li><a href="https://github.com/JohnGlendening">GitHub</a></li>
             </nav>
         </ul>
     </header>
@@ -32,64 +34,58 @@
             <hr>
             <!------Portfolio box grid here-->
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-12">
+                    <hr>
+                </div>
+            </div>
 
+            <div class="row pb-4">
 
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="content">
-                                <a target="_blank" href="./assets/images/hangman.jpg">
-                                    <img id="hang" class="portimage" src="./assets/images/hangman.jpg" alt="Hangman"></a>
-                                <div class="text-block">
-                                    <h4>Hangman</h4>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="content">
-                                    <a target="_blank" class="portimage " href="./assets/images/rpggame.jpg">
-                                        <img id="rpg" class="portimage" src="./assets/images/rpggame.jpg" alt="RPG Game"></a>
-                                    <div class="text-block">
-                                        <h4>RPG Game</h4>
-                                    </div>
-                                </div>
-                            </div>
+                <div class="col-md-6 col-sm-12 pb-4">
+                    <div class="imgBox">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/JohnGlendening/Portfolio/master/assets/Emotive.JPG" alt="Emotive">
+                        <div class="box">
+                            <h4>
+                                <li><a href="https://petersvirtualservices.github.io/EmotiveProject/">Emotive </a></li>
+                                <li><a href="https://github.com/petersvirtualservices/EmotiveProject">GitHub Repository</a></li>
+                            </h4>
                         </div>
-
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="column">
-                        <div class="content">
-                            <a target="_blank" href="./assets/images/triviagame.jpg">
-                                <img id="trivia" class="portimage" src="./assets/images/triviagame.jpg" alt="Trivia Game"></a>
-                            <div class="text-block">
-                                <h4>Trivia Game</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="content">
-                            <a target="_blank" href="./assets/images/rutgersinfowidget.jpg">
-                                <img id="widget" class="portimage" src="./assets/images/rutgersinfowidget.jpg" alt="Rutgers Info Widget"></a>
-                            <div class="text-block">
-                                <h4>Rutgers Info Widget</h4>
-                            </div>
+                <div class="col-md-6 col-sm-12 pb-4">
+                    <div class="imgBox">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/JohnGlendening/Portfolio/master/assets/Workday%20Scheduler.JPG" alt="Workday Scheduler">
+                        <div class="box">
+                            <h4>
+                                <li><a href="https://johnglendening.github.io/Work-Day-Scheduler/">Workday Scheduler </a></li>
+                                <li><a href="https://github.com/JohnGlendening?tab=repositories">GitHub Repository</a></li>
+                            </h4>
                         </div>
                     </div>
                 </div>
-                <div class="column">
-                    <div class="content">
-                        <a target="_blank" href="./assets/images/rockpaperscissor.jpg">
-                            <img id="scissor" class="portimage" src="./assets/images/rockpaperscissor.jpg" alt="Rock Paper Scissor"></a>
-                        <div class="text-block">
-                            <h4>Rock Paper Scissors</h4>
-                        </div>
+
+                <div class="col-md-6 col-sm-12 pb-4">
+                    <div class="imgBox">
+                        <a target="_blank" class="portimage " href="./portfolio/assets/Weather Forecast.jpg">
+                            <img class="img-fluid" src="https://raw.githubusercontent.com/JohnGlendening/Portfolio/master/assets/Weather%20Forecast.JPG" alt="Weather Forecast">
+                            <div class="box">
+                                <h4>
+                                    <li><a href="https://johnglendening.github.io/Weather-Forecast/">Weather Forecast </a></li>
+                                    <li><a href="https://github.com/JohnGlendening?tab=repositories">GitHub Repository</a></li>
+                                </h4>
+                            </div>
                     </div>
                 </div>
             </div>
-            <!-------END GRID-------------->
+
+
+
         </div>
+    </div>
+
+    <div class="push"></div>
+
     </div>
 
 </body>
