--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,
         intitial-scale=1">
     <title>Contact Page</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -21,6 +21,9 @@
                 <li><a href="index.html">About |</a></li>
                 <li><a href="portfolio.html">Portfolio |</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://github.com/JohnGlendening/Portfolio/blob/master/assets/Glendening%20John-RES.docx.docx%5B196%5D.pdf">Resume</a></li>
+                <li><a href="https://www.linkedin.com/in/john-glendening-pmp-cfe-ab03315/">LinkedIn</a></li>
+                <li><a href="https://github.com/JohnGlendening">GitHub</a></li>
             </nav>
         </ul>
     </header>
