--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,
          initial-scale=1">
     <title>Portfolio Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets\style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
 </head>
 
